--- a/src/app/table-data/table-data.component.html
+++ b/src/app/table-data/table-data.component.html
@@ -41,3 +41,14 @@
 
                         </ng-template>
                     </p-table>
+                    <p-table [value]="[{}]">
+                        <ng-template pTemplate="body">
+                            <tr>
+                                <td colspan="6"></td>
+                                <td colspan="1"><b> {{ 'car-parts.total' | translate }}: </b></td>
+                                <td colspan="9"><b>{{total}}</b></td>
+                            </tr>
+                        </ng-template>
+
+
+                    </p-table>
